k8s-deployments.yml
###################################
# SUMA
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suma
  labels:
    app: suma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suma
  template:
    metadata:
      labels:
        app: suma
    spec:
      containers:
        - name: suma
          image: us-central1-docker.pkg.dev/gcloudprojectg14/uniandes-misw-native-calculadora-app/suma:1.1
          ports:
            - containerPort: 4000
          # Realizar pull siempre a la imagen
          imagePullPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: servicio-suma
  annotations:
    cloud.google.com/backend-config: '{"default": "calculadora-numeros-suma-config"}'
spec:
  type: NodePort
  selector:
    app: suma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31019

---
###################################
# MULTIPLICACION
###################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplicacion
  labels:
    app: multiplicacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiplicacion
  template:
    metadata:
      labels:
        app: multiplicacion
    spec:
      containers:
        - name: multiplicacion
          image: us-central1-docker.pkg.dev/gcloudprojectg14/uniandes-misw-native-calculadora-app/multiplicacion:1.2
          ports:
            - containerPort: 4000
          imagePullPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: servicio-multiplicacion
  annotations:
    cloud.google.com/backend-config: '{"default": "calculadora-numeros-multiplicacion-config"}'
spec:
  type: NodePort
  selector:
    app: multiplicacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
      nodePort: 31017

###################################
# INGRESS
###################################
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress-8
  labels:
    name: gateway-ingress-8
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /suma
        backend:
          service:
            name: servicio-suma
            port: 
              number: 80
      - pathType: Prefix
        path: /multiplicar
        backend:
          service:
            name: servicio-multiplicacion
            port: 
              number: 80
